DigicielFull/force-app/main/default/objects/amc__Agenda_Item__c/fields/amc__Action__c.field-meta.xml
<CustomField>
    <fullName>amc__Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Action that time will be logged against when discussing this Agenda Item</inlineHelpText>
    <label>Action</label>
    <referenceTo>amc__Action__c</referenceTo>
    <relationshipLabel>Agenda Items</relationshipLabel>
    <relationshipName>Agenda_Items</relationshipName>
    <type>Lookup</type>
</CustomField>