DigicielFull/force-app/main/default/objects/amc__Agenda_Item__c/fields/amc__Add_to_Next_Meeting__c.field-meta.xml
<CustomField>
    <fullName>amc__Add_to_Next_Meeting__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this field if this Agenda Item should be included in the next Meeting within this Meeting Manager</inlineHelpText>
    <label>Add to Next Meeting</label>
    <type>Checkbox</type>
</CustomField>