DigicielFull/force-app/main/default/objects/amc__Agenda_Item__c/fields/amc__Meeting__c.field-meta.xml
<CustomField>
    <fullName>amc__Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Meeting this Agenda Item relates to</inlineHelpText>
    <label>Meeting</label>
    <referenceTo>amc__Meeting__c</referenceTo>
    <relationshipLabel>Agenda Items</relationshipLabel>
    <relationshipName>Agenda_Items</relationshipName>
    <type>Lookup</type>
</CustomField>