DigicielFull/force-app/main/default/objects/amc__Agenda_Item__c/fields/amc__Resolved__c.field-meta.xml
<CustomField>
    <fullName>amc__Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field if the Agenda Item was resolved within this meeting</inlineHelpText>
    <label>Resolved</label>
    <type>Checkbox</type>
</CustomField>