DigicielFull/force-app/main/default/objects/amc__Agenda_Item__c/fields/amc__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>amc__Sort_Order__c</fullName>
    <description>determines the sort order on the meeting manager</description>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>