DigicielFull/force-app/main/default/objects/amc__Agenda_Item__c/listViews/amc__All.listView-meta.xml
<ListView>
    <fullName>amc__All</fullName>
    <columns>NAME</columns>
    <columns>amc__Summary__c</columns>
    <columns>amc__Resolved__c</columns>
    <columns>amc__Add_to_Next_Meeting__c</columns>
    <columns>amc__Meeting__c</columns>
    <columns>amc__Action__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>